@@ -1,7 +1,7 @@
 package com.datastax.spark.connector.writer
 
 import com.datastax.driver.core._
-import com.datastax.spark.connector.util.Logging
+import org.apache.spark.Logging
 
 private[connector] class BatchStatementBuilder(
     val batchType: BatchStatement.Type,
